# speedrun-mcp

./: .gitignore  .pre-commit-config.yaml  BUGS.md  LICENSE  README.md  glama.json  pyproject.toml  server.json
.github/workflows/: ci.yml  live.yml  publish.yml
src/speedrun_mcp/: __init__.py  client.py  format.py  server.py
tests/: test_client.py  test_format.py  test_live.py  test_mcp_protocol.py  test_server.py
