[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speedrun-mcp"
version = "0.3.1"
description = "Model Context Protocol server for the speedrun.com API — games, leaderboards, world records, players, personal bests, and (with an API key) run submission and moderation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "William Jeffries" }]
keywords = ["mcp", "model-context-protocol", "speedrun", "speedrun.com", "llm", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment",
]
dependencies = [
    # 1.6 is the first release with ToolAnnotations + @tool(annotations=...).
    "mcp>=1.6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.8", "pre-commit>=3.5"]

[project.urls]
Homepage = "https://github.com/williamcodes/speedrun-mcp"
Issues = "https://github.com/williamcodes/speedrun-mcp/issues"
"speedrun.com API" = "https://github.com/speedruncomorg/api"

[project.scripts]
speedrun-mcp = "speedrun_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["network: tests that hit the live speedrun.com API"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pyflakes/pycodestyle (default) + import sorting, bugbear, pyupgrade, simplify.
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
# httpx/mcp/pydantic ship types; ignore any third-party without stubs.
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
